--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,12 @@ requires-python = ">=3.12"
 authors = [
     {name = "Yasu", email = "your-email@example.com"}
 ]
-license = {text = "MIT"}
+license = {text = "CC-BY-NC-SA-4.0"}
 keywords = ["openreview", "paper-review", "ai-agent", "research", "llm", "langgraph", "meta-review", "deep-research"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
+    "License :: Free for non-commercial use",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
