--- a/.gitignore
+++ b/.gitignore
@@ -74,6 +74,10 @@ quickstart.sh
 mypy.ini
 ruff.toml
 
+# Internal documentation/notes (not for public repository)
+paper/
+docs/paper/
+
 # Keep directory structure
 !storage/papers_data/.gitkeep
 !storage/cache/.gitkeep
